Fix alignment issue in left panel when there is lengthy content

--- a/components/src/core/components/TableSidebar/table-left-panel.scss
+++ b/components/src/core/components/TableSidebar/table-left-panel.scss
@@ -53,7 +53,6 @@
         }
         .oxd-dropdown-selected-chip {
           position: relative;
-          min-width: 20px;
           width: auto;
           padding: 6px 9px 4px 9px;
           font-size: 0.75rem;
